fixed contact link to send emial

--- a/style.css
+++ b/style.css
@@ -134,3 +134,10 @@ footer {
   background: #eee;
   font-size: 0.9rem;
 }
+
+.warning {
+  color: #33ccff;
+  padding: 10px;
+  text-align: center;
+  font-weight: bold;
+}
